traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:7: error: not found: value setPosition
setPosition(0,1)
^TraversalByColumn:9: error: not found: value setPosition
ecritMessage(a1);setPosition(i);a1=a1+1
                 ^